<resources>
    <string name="app_name">NewsPaperTask</string>

    <string name="intro0"> الأعلى للآثار يسلّم المواطن يحيى طه شهادة شكر وتقدير من وزارة السياحة </string>
    <string name="intro1">إعلاميون ضد الكراهية" يناقش دور المؤسسات والمواثيق الإعلامية في احتواء وباء الكراهية </string>
    <string name="intro2">استمرار حملة "سلامتك تهمنا" للتحذير من السلوكيات الخاطئة في التعامل مع وسائل النقل </string>
    <string name="intro3">الزراعة تتابع أعمال رفع كفاءة محطة بحوث البساتين بقها وبرنامج تقاوي الخضر</string>
    <string name="intro4">شركة الاتحاد العربي تواصل تطهير وتعقيم الأتوبيسات للحد من انتشار كورونا </string>
    <string name="intro5">شركة المترو تواصل تطهير وتعقيم المحطات والقطارات منعًا لانتشار كورونا بين المستخدمين</string>
    <string name="intro6">عقد الملتقى التدريبي الثاني للمحامين 13 أكتوبر</string>
    <string name="author0"> &#160;عمر المهدي </string>
    <string name="author1"> &#160;الأردن - شيماء عبد الهادي </string>
    <string name="author2"> &#160;نبيل بدر </string>
    <string name="author4"> &#160;نبيل بدر </string>
    <string name="author5"> &#160;نبيل بدر </string>
    <string name="author3"> &#160;أحمد حامد</string>
    <string name="author6"> &#160;محمد على </string>

    <string name="new0">        سلم اليوم الدكتور مصطفى وزيري الأمين العام للمجلس الأعلى للآثار، شهادة شكر وتقدير من وزارة السياحة والآثار للمواطن يحيى طه الذي قام بالإبلاغ وتسليم لوحة أثرية  كان قد عثر عليها، في شهر يوليو الماضي، داخل قطعة أرض يمتلكها بالإسماعيلية، أثناء استصلاحها تمهيدا للزراعة.
        وأكد الدكتور مصطفى وزيري أن الوزارة تحرص دائما على تقدير كل مواطن مصري يقدم نموذجا وعملا مشرفا للحفاظ على إرث وتاريخ بلاده والحضارة المصرية العريقة.كما تم منح المواطن مكافأة مالية تم تقديرها وفقا لقرار موافقة اللجنة الدائمة للآثار المصرية ومجلس إدارة المجلس الأعلى للآثار.جدير بالذكر أن هذه اللوحة الأثرية تم عرضها بمتحف الإسماعيلية بعد ترميمها، وهي تمثل إحدى اللوحات الحدودية التي كان يشيدها الملك أثناء توجهه للحملات العسكرية ناحية الشرق، ويبلغ طولها 230 سم وعرضها 103سم وسمكها 45 سم؛ وهى مصنوعة من الحجر الرملي ويعلوها قرص الشمس المجنح حفر عليها خرطوش للمك واح- ايب- رع- خامس ملوك الأسرة 26 و15 سطراً من الكتابة الهيروغليفية.
    </string>

    <string name="new1"> الكاثوليكي للإعلام، بالعاصمة الأردنية عمّان، مناقشة خطاب الكراهية وسبل التصدي له، بحضور أكثر من مئة إعلامي وإعلامية من مختلف الدول العربية، برعاية الأمير غازي بن محمد، عضو مجلس حكماء المسلمين، كبير مستشاري الملك عبدالله الثاني بن الحسين، ملك المملكة الأردنية الهاشمية
        وخلال الجلسة الرابعة من المؤتمر التي جاءت بعنوان "احتواء الوباء واحتواء خطاب الكراهية في الإعلام العربي" قال الدكتور يوسف الحسن، الكاتب والمفكر الإماراتي، إن الإعلام العربي خلال فترة الوباء غاب عن تغطية القصص الإنسانية للحالات التي تأثرت بوباء كورونا، كما افتقر أحيانًا إلى رصد المعلومات الخاطئة حول الوباء، موضحًا أن الجائحة نبهت العالم إلى أهمية التعايش الإنساني، بدوره قال عثمان ميرغني، رئيس تحرير جريدة التيار السودانية، إن الكراهية تشبه وباء كورونا في كونها عدو يصعب رصده ورؤيته ويحتاج مجهودًا كبيرًا لاحتوائه، داعيًا إلى إرساء بنود في المؤسسات الإعلامية تشجع الإعلاميين على مواجهة خطاب الكراهية.

        من جهته، قال الإعلامي مصطفى بكري، إنه لا يمكن تحميل المسلمين وحدهم مسؤولية خطاب الكراهية، بدليل وجود الكثير من أشكال الكراهية التي تمارس من غير المسلمين، موضحًا أن الأردن والإمارات قدمتا نموذجًا للتسامح، بينما قالت الإعلامية الأردنية تهاني حلمي إن وسائل التواصل الاجتماعي كانت بيئة حاضنة للكراهية والتشكيك خلال جائحة كورونا، ومارست الكراهية على فئات عرقية واجتماعية بعينها.

        وأدار الجلسة الخامسة في المؤتمر، والتي عقدت تحت عنوان" التشريعات القانونية والمواثيق الإعلامية وأثرها في مواجهة خطاب الكراهية" يوسف الرفايعة، مدير قسم الإعلام بمجلس حكماء المسلمين، الذي أوضح أن مدونة العشرين للعمل الإعلامي من أجل الأخوة الإنسانية، وضعت العديد من المبادئ والقيم للتعامل مع القضايا الإنسانية، لكن لا زالت هناك حاجة إلى تفعيل المواثيق الإعلامية، وإلى وضع تعريف أكثر دقة للكراهية، وتدريب الصحفيين على التعامل مع المصطلحات التي قد تشير لها، بينما قال الإعلامي الأردني تاج الدين عبدالحق، إن وسائل التواصل الاجتماعي باتت مصدرًا للأخبار لوسائل الإعلام التقليدية، لذلك يجب أن يستفيد منها الإعلام التقليدي، دون أن يقع في خطاب الكراهية الذي يبثه الإعلام الحديث أحيانًا، فيما رأت الإعلامية اللبنانية لور سليمان أنه يجب الفصل بين القوانين الرسمية والمواثيق الإعلامية، فالقوانين الرسمية لديها قوة إلزامية، بينما تفتقد المواثيق الإعلامية لصفة الإلزام.

        من جانبها قالت الإعلامية التونسية هاجر التليلي، إن وسائل الإعلام كثيرًا ما تسهم في نشر خطاب الكراهية، بسبب اهتمامها بنسب المشاهدة، من خلال إظهار أشخاص يقومون بنشر خطاب الكراهية والترويج لتصريحاتهم، ولذلك فإنه يجب الالتزام بالمواثيق الأخلاقية لتجنب الوقوع في مثل هذه الأخطاء، فيما أكد الإعلامي المغربي سعيد الريحاني على ضرورة سن قوانين جديدة  لمواجهة خطاب الكراهية.

        وأدار الجلسة السادسة والأخيرة من جلسات مؤتمر "إعلاميون ضد الكراهية" الإعلامي اللبناني أسعد مارون، الذي أوضح أن الإعلام ينساق أحيانًا خلف خطاب الكراهية، بينما أكد أسامة سرايا، رئيس تحرير جريدة الأهرام الأسبق، أن دور المؤسسات النقابية والمجتمع مدني مهم في مواجهة خطاب الكراهية، فيما قال محمد أبوعبيد الإعلامي الفلسطيني، إن الكراهية التي يجب أن تحارب هي التي ينجم عنها أذى وصراعات، لا التي تعبر عن مجرد مشاعر شخصية.

         من جانبه قال الإعلامي العماني، الدكتور محمد العريمي، إن المؤسسات الإعلامية يجب أن تخصص حصصًا تثقيفية للصحفيين، مضيفًا أن تبني الدول لفكرة مواجهة خطاب الكراهية، سيؤدي إلى تصدي المؤسسات الإعلامية في تلك الدول لخطاب الكراهية.
    </string>

    <string name="new2">تستمر وزارة النقل في استكمال حملة "سلامتك تهمنا" على صفحتها الرسمية بموقع التواصل الاجتماعي "فيسبوك"، في إطار خطتها للتوعية بالسلوكيات الخاطئة في التعامل مع الطرق وداخل المواصلات العامة، إلى جانب خطة النقل الاحترازية للوقاية والتوعية من انتشار فيروس كورونا.
        وقامت صفحة الوزارة، بنشر صور تحث الركاب على عبور الطريق من خلال أنفاق المشاة، وتجنب العبور من الأماكن غير المخصصة للعبور أو الفتحات الموجودة في الأسوار بما يعرض حياة المارة للخطر، وكذلك إلقاء المهملات والمخلفات داخل عربات القطارات، وأيضا التحذير من الركوب بين عربات القطار أو على سطح القطارات أو ركوب القطار بعد تحركه من المحطة وكذلك النزول قبل توقفه بالمحطات.

        كما استمرت صفحة الوزارة في نشر منشورات تحث من خلالها الركاب على ارتداء الكمامات، والاهتمام بعملية التباعد الاجتماعي في وسائل النقل والمواصلات العامة ومترو الأنفاق والسكة الحديد والأتوبيسات، لتجنب الإصابة أو انتشار فيروس كورونا بين المستخدمين.

        يأتي ذلك فى إطار الإجراءات اليومية التي تتبعها وزارة النقل، للحد من انتشار فيروس كورونا بين مستخدمي وسائل ومرافق النقل من تعقيم وتطهير للمحطات والقطارات سواء في مرفق السكك الحديدية، أو مترو الأنفاق وحتى شركة الاتحاد العربي للنقل البري التابعة للوزارة
    </string>

    <string name="new3">قام الدكتور عادل عبدالعظيم وكيل مركز البحوث الزراعية والمستشار سعيد صالح مستشار وزير الزراعة للمتابعة والمسئول عن ملف حصر ورفع كفاءة الأصول، بزيارة محطة بحوث البساتين بقها لمتابعة جهود رفع كفاءة المحطة وتنفيذ تكليفات وزير الزراعة التي أصدرها خلال زيارته لها الأسبوع الماضي.

        يأتي ذلك تنفيذا لتوجيهات الرئيس عبد الفتاح السيسي بتكثيف كافة الجهود وتقديم الدعم الكامل للبرنامج الوطني لإنتاج تقاوي بذور الخضر، وفي إطار متابعة زيارة السيد القصير وزير الزراعة لمحطة بحوث الخضر بقها .

        جدير بالذكر أن مساحة المحطة تبلغ ٤٢ فدانا، وتحتوي على ١٢٠ صوبة زراعية بعضها تم تخصيصه لتجارب البرنامج الوطني لإنتاج تقاوي بذور الخضر.

        وأكد مستشار وزير الزراعة للمتابعة أن عملية  حصر الأصول ورفع كفاءتها مستمرة لتحقيق أقصى استفادة ممكنه منها وعائد اقتصادي عادل، وأن هذا  الملف حقق نتائج غير مسبوقة
    </string>

    <string name="new4">تواصل شركة الاتحاد العربي للنقل البري، "السوبرجيت" إحدى شركات وزارة النقل جهودها لتطهير وتعقيم كافة الأتوبيسات لمنع انتشار فيروس كورونا بين المستخدمين.

        وأعلنت وزارة النقل، اليوم الثلاثاء، أن الشركة تقوم بتطهير شبابيك التذاكر وأماكن الانتظار ضمن الإجراءات الاحترازية اللازمة التي تتخذها وزارة النقل لمواجهة فيروس كورونا.

        وتعمل وزارة النقل، منذ ظهور فيروس كورونا على الحد من انتشار العدوى بين مستخدمي وسائل النقل التابعة لها في القاهرة وباقي المحافظات، حيث تجري الهيئة بشكل يومي إجراءات تعقيم وتطهير المحطات والقطارات والأتوبيسات كإجراء احترازي، وذلك تنفيذا لتوجيهات وزير النقل، الفريق مهندس كامل الوزير.

    </string>

    <string name="new5"> عمليات تطهير وتعقيم محطات المترو والقطارات بالخطين الأول والثاني، وذلك تنفيذا لتوجيهات وزير النقل، الفريق مهندس كامل الوزير.

        وتعمل شركة المترو، على الحد من انتشار فيروس كورونا المستجد، حيث تجري الشركة بشكل يومي إجراءات تعقيم وتطهير المحطات والقطارات كإجراء احترازي.
    </string>

    <string name="new6">أصدر رجائي عطية نقيب المحامين، رئيس اتحاد المحامين العرب، قرارًا بالموافقة على عقد  وافتتاح الملتقى التدريبي العام الثاني للمحامين لعام 2021 تحت عنوان "الملتقى العربي للغة والمحاماة"، بمعهد المحاماة بالنقابة العامة 2021 بمدينة القاهرة.

        ومن المقرر انعقاد الملتقى التدريبي العام الثاني للمحامين لعام 2021، يومي الأربعاء والخميس الموافقين يومي 13، 14 من شهر  أكتوبر  2021 ميلادية ، مع مراعاة كافة شروط التباعد والإجراءات الاحترازية اللازمة وفق قرارات وزارة الصحة و مجلس رئاسة الوزراء.
    </string>

    <string name="date_time0"> 28&#8211;9&#8211;2021 | 19:17 &#160;</string>
    <string name="date_time1"> 28&#8211;9&#8211;2021 | 18:42 &#160;</string>
    <string name="date_time2"> 28&#8211;9&#8211;2021 | 18:41 &#160;</string>
    <string name="date_time3"> 28&#8211;9&#8211;2021 | 18:40 &#160;</string>
    <string name="date_time4"> 28&#8211;9&#8211;2021 | 18:14 &#160;</string>
    <string name="date_time5"> 28&#8211;9&#8211;2021 | 18:12 &#160;</string>
    <string name="date_time6"> 28&#8211;9&#8211;2021 | 18:11 &#160;</string>
    <string name="not_found">Not Found</string>
</resources>