<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:textColor="@color/red"
            android:text="@string/intro0" />

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="14sp"
            android:textColor="#656565"
            android:paddingHorizontal="16dp"
            android:text="@string/date_time0" />

        <ImageView
            android:id="@+id/news_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/new0" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="8dp"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:text="@string/author0" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/new0" />


    </LinearLayout>
</ScrollView>